Fix <pre> elements overflowing

--- a/mulre/web/static/style.css
+++ b/mulre/web/static/style.css
@@ -4,6 +4,7 @@ html {
 
 pre {
     white-space: pre-wrap;
+    word-break: break-all;
 }
 
 a {
